# graph_analyzer

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
src/: FileHandler.cpp  FileHandler.h  Graph.cpp  Graph.h  GraphAnalyzer.cpp  GraphAnalyzer.h  OrdTreeChecker.cpp  OrdTreeChecker.h  main.cpp
tests/: test5.txt  test6.txt
